// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons Link Button renders correctly 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  background: #FFFFFF;
  color: #039842;
  background: #FFFFFF;
  border-color: #FFFFFF;
  color: #039842;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

.c0:hover {
  color: #006721;
  border-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
  border-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(Styled(styled.button)))
    colour="primary"
    disabled={false}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "Styled(Styled(Styled(styled.button)))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
            "sc-htpNat",
          ],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(Styled(styled.button)))>
</ThemeProvider>
`;

exports[`Buttons Link Button renders correctly in disabled state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  background: #FFFFFF;
  color: #039842;
  background: #FFFFFF;
  border-color: #FFFFFF;
  color: #039842;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

.c0:hover {
  color: #006721;
  border-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
  border-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(Styled(styled.button)))
    colour="primary"
    disabled={true}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "Styled(Styled(Styled(styled.button)))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
            "sc-htpNat",
          ],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={true}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(Styled(styled.button)))>
</ThemeProvider>
`;

exports[`Buttons Link Button renders correctly in loading state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  pointer-events: none;
  cursor: disabled;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  color: transparent !important;
  background-color: #949494;
  border-color: #949494;
  position: relative;
  background: #FFFFFF;
  color: #039842;
  background: #FFFFFF;
  border-color: #FFFFFF;
  color: #039842;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:after {
  -webkit-animation: iVXCSc 0.5s linear infinite;
  animation: iVXCSc 0.5s linear infinite;
  border: 0.1rem solid #FFFFFF;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: '';
  display: block;
  height: 0.8rem;
  left: 50%;
  margin-left: -0.4rem;
  margin-top: -0.4rem;
  position: absolute;
  top: 50%;
  width: 0.8rem;
  z-index: 1;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

.c0:after {
  border-color: #949494;
  border-right-color: transparent;
  border-top-color: transparent;
}

.c0:hover {
  color: #006721;
  border-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
  border-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  border-color: #FFFFFF;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(Styled(styled.button)))
    colour="primary"
    disabled={false}
    loading={true}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              ";
",
            ],
          },
          "displayName": "Styled(Styled(Styled(styled.button)))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
            "sc-htpNat",
          ],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={true}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={true}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(Styled(styled.button)))>
</ThemeProvider>
`;

exports[`Buttons Outline Button renders correctly 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  background: #FFFFFF;
  color: #039842;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(styled.button))
    colour="primary"
    disabled={false}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htpNat",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(Styled(styled.button))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
          ],
          "render": [Function],
          "styledComponentId": "sc-htpNat",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(styled.button))>
</ThemeProvider>
`;

exports[`Buttons Outline Button renders correctly in disabled state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  background: #FFFFFF;
  color: #039842;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(styled.button))
    colour="primary"
    disabled={true}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htpNat",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(Styled(styled.button))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
          ],
          "render": [Function],
          "styledComponentId": "sc-htpNat",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={true}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(styled.button))>
</ThemeProvider>
`;

exports[`Buttons Outline Button renders correctly in loading state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  pointer-events: none;
  cursor: disabled;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  color: transparent !important;
  background-color: #949494;
  border-color: #949494;
  position: relative;
  background: #FFFFFF;
  color: #039842;
  border-color: #1E1E1E;
  color: #111111;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:after {
  -webkit-animation: iVXCSc 0.5s linear infinite;
  animation: iVXCSc 0.5s linear infinite;
  border: 0.1rem solid #FFFFFF;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: '';
  display: block;
  height: 0.8rem;
  left: 50%;
  margin-left: -0.4rem;
  margin-top: -0.4rem;
  position: absolute;
  top: 50%;
  width: 0.8rem;
  z-index: 1;
}

.c0:hover {
  border-color: #006721;
  color: #006721;
  background-color: #FFFFFF;
}

.c0:focus {
  background-color: #E6F7EA;
}

.c0:disabled {
  background-color: #FFFFFF;
  color: #949494;
}

.c0:hover {
  border-color: #111111;
  color: #111111;
}

.c0:focus {
  background-color: #DBDBDB;
}

.c0:after {
  border-color: #949494;
  border-right-color: transparent;
  border-top-color: transparent;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(Styled(styled.button))
    colour="black"
    disabled={false}
    loading={true}
    onClick={[Function]}
  >
    <StyledComponent
      colour="black"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htpNat",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(Styled(styled.button))",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
            "sc-bwzfXH",
          ],
          "render": [Function],
          "styledComponentId": "sc-htpNat",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={true}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={true}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(Styled(styled.button))>
</ThemeProvider>
`;

exports[`Buttons Primary Button renders correctly 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(styled.button)
    colour="primary"
    disabled={false}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.button)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(styled.button)>
</ThemeProvider>
`;

exports[`Buttons Primary Button renders correctly in disabled state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(styled.button)
    colour="primary"
    disabled={true}
    loading={false}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={true}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.button)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={false}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={true}
        loading={false}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(styled.button)>
</ThemeProvider>
`;

exports[`Buttons Primary Button renders correctly in loading state 1`] = `
.c0 {
  border-radius: 4px;
  cursor: pointer;
  font-size: 14px;
  font-weight: 600;
  height: 44px;
  -webkit-letter-spacing: 0.8px;
  -moz-letter-spacing: 0.8px;
  -ms-letter-spacing: 0.8px;
  letter-spacing: 0.8px;
  outline: none;
  padding: 0 25px;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  pointer-events: none;
  cursor: disabled;
  background: #039842;
  border: 1px solid #039842;
  color: #FFFFFF;
  color: transparent !important;
  background-color: #949494;
  border-color: #949494;
  position: relative;
}

.c0:disabled {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:hover {
  background-color: #006721;
}

.c0:focus {
  background-color: #039842;
}

.c0:disabled {
  background-color: #949494;
  border-color: #949494;
}

.c0:after {
  -webkit-animation: iVXCSc 0.5s linear infinite;
  animation: iVXCSc 0.5s linear infinite;
  border: 0.1rem solid #FFFFFF;
  border-radius: 50%;
  border-right-color: transparent;
  border-top-color: transparent;
  content: '';
  display: block;
  height: 0.8rem;
  left: 50%;
  margin-left: -0.4rem;
  margin-top: -0.4rem;
  position: absolute;
  top: 50%;
  width: 0.8rem;
  z-index: 1;
}

<ThemeProvider
  theme={
    Object {
      "borderRadius": Object {
        "button": "4px",
        "default": "2px",
        "input": "2px",
      },
      "colours": Object {
        "backToBlack": "#111111",
        "black": "#000000",
        "blackBetty": "#1E1E1E",
        "blueSmoke": "#949494",
        "green100": "#CFEACC",
        "green200": "#9DDCAC",
        "green300": "#72D08A",
        "green400": "#4FC571",
        "green50": "#E6F7EA",
        "green500": "#23BA57",
        "green600": "#10AD52",
        "green700": "#039842",
        "green800": "#008736",
        "green900": "#006721",
        "macyGrey": "#DBDBDB",
        "paintItBlack": "#333333",
        "primary": "#039842",
        "redRedWine": "#EF4423",
        "silverSprings": "#F5F5F5",
        "whiteDenim": "#FFFFFF",
      },
      "dimensions": Object {
        "buttonHeight": "44px",
        "containerWidth": Object {
          "default": "800px",
          "fullscreen": "100%",
          "large": "1000px",
          "small": "600px",
        },
        "inputHeight": "44px",
        "navbarHeight": Object {
          "lg": "84px",
          "md": "74px",
          "xs": "62px",
        },
      },
      "fontSizes": Object {
        "base": "16px",
        "body1": "16px",
        "body2": "14px",
        "button": "14px",
        "caption": "10px",
        "formGroupLabel": "14px",
        "h1": "96px",
        "h2": "60px",
        "h3": "48px",
        "h4": "34px",
        "h5": "24px",
        "h6": "20px",
        "overline": "10px",
        "subtitle1": "16px",
        "subtitle2": "14px",
        "title": "54px",
      },
      "fonts": Object {
        "regular": "Open Sans",
      },
      "media": Object {
        "lg": [Function],
        "md": [Function],
        "sm": [Function],
        "xl": [Function],
        "xs": [Function],
      },
      "ruler": Array [
        0,
        4,
        8,
        12,
        16,
        20,
        24,
        28,
        32,
        36,
        40,
        44,
        48,
        52,
        56,
        60,
        64,
        68,
        72,
        76,
        80,
      ],
      "utils": Object {
        "transition": [Function],
      },
      "zIndex": Object {
        "navbar": 100,
      },
    }
  }
>
  <Styled(styled.button)
    colour="primary"
    disabled={false}
    loading={true}
    onClick={[Function]}
  >
    <StyledComponent
      colour="primary"
      disabled={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": false,
            "lastClassName": "c0",
            "rules": Array [
              "
  ",
              [Function],
              "
",
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "Styled(styled.button)",
          "foldedComponentIds": Array [
            "sc-bdVaJa",
          ],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "button",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      loading={true}
      onClick={[Function]}
    >
      <button
        className="c0"
        disabled={false}
        loading={true}
        onClick={[Function]}
      >
        Button
      </button>
    </StyledComponent>
  </Styled(styled.button)>
</ThemeProvider>
`;
